# l2048

./: .gitignore  CMakeLists.txt  README.md  block.cpp  block.h  l2048.pro  main.cpp  maininterface.cpp  maininterface.h  maininterface.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: block.h  mainwindow.h
src/: main.cpp  mainwindow.cpp
